tests/paczka1/fuzzy1/22976950.err
Error in line 12: hM7aAIf7ez A867 72,31
Error in line 4: LsEy7iPGV8k A867 95,7
Error in line 17: A867 A867 39,1
Error in line 11: WRZUL S725 168,7
Error in line 26: WRZUL S630 68,5
Error in line 13: hM7aAIf7ez A867 85,8
